--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
   "homepage": "https://github.com/dafelcardozo/zone-activity#readme",
   "devDependencies": {
     "gulp": "^3.9.1"
+  },
+  "dependencies": {
+    "finalhandler": "^0.5.0",
+    "serve-static": "^1.11.1"
   }
 }
