--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "gulp": "^3.9.1"
   },
   "dependencies": {
+    "ejs": "^2.4.2",
+    "express": "^4.14.0",
     "finalhandler": "^0.5.0",
     "serve-static": "^1.11.1"
   }
