--- a/package.json
+++ b/package.json
@@ -23,12 +23,19 @@
   },
   "homepage": "https://github.com/dafelcardozo/zone-activity#readme",
   "devDependencies": {
-    "gulp": "^3.9.1"
+    "browser-sync": "^2.13.0",
+    "gulp": "^3.9.1",
+    "gulp-clean-css": "^2.0.11",
+    "gulp-concat": "^2.6.0",
+    "gulp-minify": "0.0.12",
+    "gulp-rename": "^1.2.2",
+    "gulp-sass": "^2.3.2",
+    "gulp-uglify": "^1.5.4",
+    "gulp-useref": "^3.1.0",
+    "jshint": "^2.9.2"
   },
   "dependencies": {
     "ejs": "^2.4.2",
-    "express": "^4.14.0",
-    "finalhandler": "^0.5.0",
-    "serve-static": "^1.11.1"
+    "express": "^4.14.0"
   }
 }
